upp form group + validate

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <app-header></app-header>
-<app-product></app-product>
+<app-product [products]="products"
+             (deleteProductEmit)="deleteProduct($event)"
+             (editProductEmit)="editProduct($event)"
+             (createProductEmit)="createProduct($event)"></app-product>
+<app-home [products]="products"></app-home>
 <app-footer></app-footer>
