--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -17,7 +17,7 @@
         <a class="nav-link" href="#">Product</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <input type="text">
       </li>
     </ul>
   </div>
