--- a/src/app/product/edit-product/edit-product.component.html
+++ b/src/app/product/edit-product/edit-product.component.html
@@ -1,10 +1,10 @@
 <div class="container">
-  <h1>Create Product</h1>
+  <h1>Edit Product</h1>
 
   <form [formGroup]="productForm">
     <div class="form-group">
       <label>Name</label>
-      <input type="text" class="form-control" formControlName="name" placeholder="name">
+      <input type="text" class="form-control" formControlName="name" placeholder="name" readonly>
     </div>
     <div class="form-group">
       <label>Img:</label>
