--- a/src/app/product/create-product/create-product.component.html
+++ b/src/app/product/create-product/create-product.component.html
@@ -22,6 +22,6 @@
       </select>
     </div>
 
-    <button type="submit" (click)="saveProduct()" class="btn btn-primary">Submit</button>
+    <button type="submit" (click)="createProduct()" class="btn btn-primary">Submit</button>
   </form>
 </div>
